--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -18,23 +18,28 @@
     </div>
 
     <ng-container *ngIf="isAPIAvailable && (!isConnected || !maintenance || currentAuthSummary?.user?.ring === 'ADMIN')">
-        <app-navbar *ngIf="isConnected && !hideNavBar"></app-navbar>
-
-        <div class="banner" *ngIf="(maintenance) && (!isConnected || currentAuthSummary?.user?.ring === 'ADMIN')">
-            {{ 'maintenance_title' | translate }}
-        </div>
-        <div class="banner update" (click)="refresh()" *ngIf="showUIUpdatedBanner">
-            {{ 'ui_updated' | translate }}
-        </div>
-
-        <div class="page" [class.connected]="isConnected && !hideNavBar">
-            <div class="content" [class.connected]="isConnected && !hideNavBar">
-                <router-outlet></router-outlet>
-                <div class="ui active text loader" *ngIf="displayResolver">{{ 'common_loading_project' | translate }}
+        <nz-layout>
+            <nz-header>
+                <app-navbar></app-navbar>
+            </nz-header>
+            <nz-content>
+                <div class="banner" *ngIf="(maintenance) && (!isConnected || currentAuthSummary?.user?.ring === 'ADMIN')">
+                    {{ 'maintenance_title' | translate }}
                 </div>
-            </div>
-        </div>
-        <app-node-edit-modal></app-node-edit-modal>
+                <div class="banner update" (click)="refresh()" *ngIf="showUIUpdatedBanner">
+                    {{ 'ui_updated' | translate }}
+                </div>
+                <div class="page" [class.connected]="isConnected && !hideNavBar">
+                    <div class="content inner-content" [class.connected]="isConnected && !hideNavBar">
+                            <router-outlet></router-outlet>
+                        <div class="ui active text loader" *ngIf="displayResolver">{{ 'common_loading_project' | translate }}
+                        </div>
+                    </div>
+                </div>
+                <app-node-edit-modal></app-node-edit-modal>
+            </nz-content>
+
+        </nz-layout>
     </ng-container>
 </div>
 <ng-template #templateRootToast let-data="data">
