--- a/ui/src/app/app.component.scss
+++ b/ui/src/app/app.component.scss
@@ -6,8 +6,7 @@
     flex-direction: column;
 
     .page {
-        flex: 1;
-        overflow: hidden;
+        height: 100%;
 
         .content {
             height: 100%;
