--- a/ui/src/app/views/settings/worker-model/form/worker-model.form.html
+++ b/ui/src/app/views/settings/worker-model/form/worker-model.form.html
@@ -358,7 +358,7 @@
                                 <nz-form-control>
                                     <nz-select nzShowSearch name="pattern" [(ngModel)]="patternSelected" nzPlaceHolder="Select..."
                                                (ngModelChange)="patternChange()">
-                                        <nz-option *ngFor="let p of patterns" [nzValue]="p" [nzLabel]="p.name"></nz-option>
+                                        <nz-option *ngFor="let p of patternsFiltered" [nzValue]="p" [nzLabel]="p.name"></nz-option>
                                     </nz-select>
                                 </nz-form-control>
                             </nz-form-item>
