--- a/ui/src/ngzorro.dark.less
+++ b/ui/src/ngzorro.dark.less
@@ -1,9 +1,5 @@
 @import "node_modules/ng-zorro-antd/ng-zorro-antd.dark.less";
 
-@component-background: #383736;
-
-@layout-body-background: #2d2c2c;
-
 .CodeMirror {
   border: 1px solid #434343;
 }
@@ -14,4 +10,12 @@
 
 input[type=checkbox]:read-only {
   opacity: 0;
+}
+
+.ant-spin-nested-loading>div>.ant-spin .ant-spin-text {
+  text-shadow: none;
+}
+
+.inner-content {
+  background-color: #141414;
 }
