feat: change project list

--- a/ui/src/app/views/application/show/admin/repository/application.repo.html
+++ b/ui/src/app/views/application/show/admin/repository/application.repo.html
@@ -48,7 +48,7 @@
                 <nz-form-control>
                     <button nz-button nzType="primary" class="unlink" name="deleteBtn" nzDanger [nzLoading]="loadingBtn" [disabled]="loadingBtn || application.from_repository"
                             nz-popconfirm nzPopconfirmTitle="Are you sure you want to unlink this repository?" (nzOnConfirm)="removeRepository()"  nzPopconfirmPlacement="topLeft">
-                        Unkink
+                        Unlink
                     </button>
                 </nz-form-control>
             </nz-form-item>
