--- a/ui/src/ngzorro.dark.less
+++ b/ui/src/ngzorro.dark.less
@@ -19,3 +19,11 @@ input[type=checkbox]:read-only {
 .inner-content {
   background-color: #141414;
 }
+
+.entity-card {
+  border: none;
+  background: #1f1f1f;
+}
+.entity-card:hover {
+  background: #3a3a3a;
+}
