--- a/ui/src/app/shared/input/autofocus/autofocus.input.html
+++ b/ui/src/app/shared/input/autofocus/autofocus.input.html
@@ -1,4 +1,6 @@
-<div class="ui icon input">
-    <input type="text" placeholder="{{'navbar_search' | translate}}" [(ngModel)]="model" (ngModelChange)="pushModification()" #searchinput>
-    <i class="search icon"></i>
-</div>
+<nz-input-group [nzSuffix]="suffixIconSearch">
+    <input nz-input type="text" placeholder="{{'navbar_search' | translate}}" [(ngModel)]="model" (ngModelChange)="pushModification()" #searchinput>
+</nz-input-group>
+<ng-template #suffixIconSearch>
+    <i nz-icon nzType="search"></i>
+</ng-template>
