--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -17,6 +17,18 @@ body {
     overflow-y: hidden;
 }
 
+.entity-card {
+  width: 100%;
+  height: 100px;
+  padding: 1em;
+  border-radius: 3px;
+  border: 1px solid #d4d4d5;
+  background: #fff;
+}
+.entity-card:hover {
+  margin-top: -2px;
+}
+
 .nzSegment {
   display: flex;
   flex: auto;
