refactor(ui): remove sui-progress component + add ngZorro layout (#6215)

--- a/ui/src/app/views/auth/reset/reset.scss
+++ b/ui/src/app/views/auth/reset/reset.scss
@@ -1,1 +1,10 @@
-@import "../../../../common";
+nz-alert {
+  margin-bottom: 20px;
+}
+.content {
+  margin-top: 20px;
+}
+
+.right {
+  float: right;
+}
