--- a/ui/src/app/views/project/show/pipeline/pipeline.list.html
+++ b/ui/src/app/views/project/show/pipeline/pipeline.list.html
@@ -1,45 +1,27 @@
-<div class="ui grid" *ngIf="!loading">
-    <div class="ui row">
-        <div class="six wide column">
-            <h3>{{ 'project_pipelines_list' | translate }}</h3>
-        </div>
-        <div class="four wide column centered">
-            <a class="ui blue button" [routerLink]="['./pipeline']" [class.disabled]="!project.permissions.writable">{{
-                'pipeline_create' | translate }}</a>
-        </div>
-        <div class="right aligned six wide column">
+<div class="pipelineList" *ngIf="!loading">
+    <nz-row>
+        <nz-col [nzSpan]="8">
+            <h3>List of pipelines in the project</h3>
+        </nz-col>
+        <nz-col [nzSpan]="8" class="center">
+            <button nz-button nzType="primary" [routerLink]="['./pipeline']" [disabled]="!project.permissions.writable">
+                Create a pipeline
+            </button>
+        </nz-col>
+        <nz-col [nzSpan]="8">
             <app-input-autofocus [model]="filter" (modelChange)="filterChanged($event)"></app-input-autofocus>
-        </div>
-    </div>
+        </nz-col>
+    </nz-row>
 
-    <div class="ui row">
-        <div class="ui sixteen wide column">
-            <div *ngIf="project.pipeline_names && project.pipeline_names.length > 0;then pipelines;else nopipelines">
-            </div>
-            <ng-template #pipelines>
-                <div class="ui stackable four cards">
-                    <a [routerLink]="['./pipeline', pip.name]" class="ui link card"
-                        *ngFor="let pip of filteredPipelines">
-                        <div class="content">
-                            <div class="header">
-                                <span [innerText]="pip.name"></span>
-                            </div>
-                            <div class="meta" *ngIf="pip.description">
-                                <span [innerText]="pip.description.slice(0, 90)"></span><span
-                                    *ngIf="pip.description.length > 90">...</span>
-                            </div>
-                            <div class="meta" *ngIf="!pip.description"
-                                [innerText]="'common_no_description' | translate"></div>
-                        </div>
-                    </a>
-                </div>
-            </ng-template>
-            <ng-template #nopipelines>
-                <div class="ui segment">
-                    <span>{{ 'project_no_pipeline' | translate }}</span>
-                </div>
-            </ng-template>
-        </div>
-    </div>
+    <nz-row *ngIf="project.pipeline_names && project.pipeline_names.length > 0" [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+        <nz-col class="cardContainer" [routerLink]="['./pipeline', pip.name]" *ngFor="let pip of filteredPipelines" [nzSpan]="6">
+            <app-card [title]="pip.name" [description]="pip.description"></app-card>
+        </nz-col>
+    </nz-row>
+    <nz-row *ngIf="!project.application_names || project.application_names.length === 0">
+        <nz-col [nzSpan]="24">
+            <nz-alert nzType="info" nzMessage="No pipeline"></nz-alert>
+        </nz-col>
+    </nz-row>
 </div>
-<div class="ui text active loader" *ngIf="loading">{{'common_loading' | translate}}</div>
+<nz-spin *ngIf="loading" nzTip="Loading pipelines..."></nz-spin>
